# chatbot

./: README.md  pyproject.toml  vercel.json
src/: main.py
src/api/: claude_client.py
src/models/: schemas.py
src/routes/: chat.py
src/services/: haridwar_knowledge.py
src/ui/: app.js  index.html  styles.css
